--- a/index.html
+++ b/index.html
@@ -3,7 +3,26 @@
   <head>
     <meta charset="utf-8">
     <title>Introduction to CSS Lab</title>
-    <!-- Your code here! -->
+    <!-- Your code here! -->  <link href="./style.css" rel="stylesheet">
+    <style>
+       body {
+      background-size: cover;
+      background: #00b3e6;
+        }
+      div {
+        width: 700px;
+      margin: auto;
+      font-family: "Helvetica Neue";
+      padding: 30px;
+      background: white;
+      }
+      .perspective-questions {
+      font-style: italic;
+      }
+      h1 {
+        font-size: 22px;
+      }
+    </style>
   </head>
 
   <body>
